examples/type_system/failing/64_hm_inferred_call_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn id(x) {
    x
}

fn main() {
    let f = id
    let a: Int = f(1)
    let b: Int = f("x")
    print(to_string(a + b))
}
